Update appsettings for connection and RabbitMQ configs
Added `ConnectionStrings` and `RabbitMq` sections to
`appsettings.Development.json` for SQL Server and RabbitMQ
configuration. Updated `Logging` to include `AllowedHosts`.

Removed `Logging` and `AllowedHosts` from `appsettings.json`.
Refined `RabbitMq` section in `appsettings.json` for formatting.

--- a/EventIngestion.Api/appsettings.Development.json
+++ b/EventIngestion.Api/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=YOUR_SQL_SERVER;Database=EventIngestionDb;User Id=USERNAME;Password=PASSWORD;"
+  },
+  "RabbitMq": {
+    "Host": "YOUR_RABBITMQ_HOST",
+    "Exchange": "events.exchange"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
